Fix 'q' and 'R' on IE

--- a/src/cssans/sass/_lowercase.scss
+++ b/src/cssans/sass/_lowercase.scss
@@ -279,6 +279,10 @@
     &::before {
       background: RGB(var(--cssans-accent1));
     }
+
+    &::after {
+      right: 0;
+    }
   }
 
   // Letter 'r'
