--- a/src/cssans/sass/_uppercase.scss
+++ b/src/cssans/sass/_uppercase.scss
@@ -303,7 +303,7 @@
     width: 2.5em;
     background: linear-gradient(0deg, RGB(var(--cssans-primary)), RGB(var(--cssans-primary)));
     background-repeat: no-repeat;
-    background-size: 1.5em;
+    background-size: 1.5em 3em;
 
     &::before {
       width: 2em;
